--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :date %>
+    <!-- <%= f.input :date %> -->
     <%= f.input :amount %>
     <%= f.input :type %>
     <%= f.input :status %>
