--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,7 +12,8 @@ body {
     height: 480px;
     text-align: center;
     color: #fff;
-    padding-top: 100px
+    padding-top: 100px;
+    width: 100%;
 }
 
 .btn-primary {
@@ -51,4 +52,10 @@ body {
     margin-top: 50px;
     margin-left: 200px;
     padding: 20px;
+}
+
+.thumbnail {
+    text-align: center;
+    width: 70%;
+    margin-left: 60px;
 }
