--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,29 @@
         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
     </p>
 </div>
+
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <div class="caption">
+                <h3>Transactions</h3>
+                <p>Keep track of your transactions</p>
+                <p>
+                    <a class="btn btn-default" href="#" role="button">Button</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <div class="caption">
+                <h3>Money</h3>
+                <p>Make Money</p>
+                <p>
+                    <a class="btn btn-default" href="#" role="button">Button</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
