--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -4,8 +4,8 @@
   <div class="form-inputs">
     <!-- <%= f.input :date %> -->
     <%= f.input :amount %>
-    <%= f.input :type %>
-    <%= f.input :status %>
+    <!-- <%= f.input :type %> -->
+    <!-- <%= f.input :status %> -->
   </div>
 
   <div class="form-actions">
