--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
-<h1>Listing Transactions</h1>
+<h1 style="text-align:center">Listing Transactions</h1>
 <div class="panel panel-default">
     <div class="panel-body">
         <table class="table table-hover">
@@ -8,26 +8,22 @@
                 <th>Date</th>
                 <th>Amount</th>
                 <th>Type</th>
-                <th>Status</th>
-                <th colspan="3"></th>
+<!-- <th>Status</th> -->
             </tr>
-        </thead>
 
-        <tbody>
             <% @transactions.each do |transaction| %>
             <tr>
-                <td><%= transaction.created_at %></td>
+                <td><%= transaction.created_at.strftime("%m/%d/%Y") %></td>
                 <td><%= transaction.amount %></td>
-                <td><%= transaction.type %></td>
-                <td><%= transaction.status %></td>
-                <!-- <td><%= link_to 'Show', transaction %></td>
+                <td><%= transaction.type = "Deposit" %></td>
+<!-- <td><%= transaction.status %></td> -->
+<!-- <td><%= link_to 'Show', transaction %></td>
                 <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
                 <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
             </tr>
             <% end %>
-        </tbody>
-    </table>
-</div>
+        </table>
+    </div>
 </div>
 
 <br>
