--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New Transaction</h1>
+<div class="row">
+    <div class="col-sm-2 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <%= render 'form' %>
+            </div>
+        </div>
+    </div>
+</div>
 
-<%= render 'form' %>
 
 <%= link_to 'Back', transactions_path %>
