--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,9 +1,9 @@
-<%= simple_form_for(@transaction) do |f| %>
+<%= simple_form_for(@transaction, html: {class: "form-signin"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <!-- <%= f.input :date %> -->
-    <%= f.input :amount %>
+    <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
     <!-- <%= f.input :type %> -->
     <!-- <%= f.input :status %> -->
   </div>
