--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-sm-2 col-md-6">
         <div class="panel panel-default">
+            <h4>Transaction</h4>
             <div class="panel-body">
                 <%= render 'form' %>
             </div>
