--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     </p>
 </div>
 
-<div class="row">
+<!-- <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
             <div class="caption">
@@ -30,4 +30,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
