--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <!-- <%= f.input :date %> -->
     <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
-    <!-- <%= f.input :type %> -->
+    <%= f.input :type %>
     <!-- <%= f.input :status %> -->
   </div>
 
