--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <h1>Welcome to Bankoo!</h1>
-    <p>Bank Simulator</p>
+    <!-- <p>Bank Simulator</p> -->
     <p>
         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
     </p>
