--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,14 +1,19 @@
 <%= simple_form_for(@transaction, html: {class: "form-signin"}) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <!-- <%= f.input :date %> -->
-    <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
-    <!-- <%= f.input :type %> -->
-    <!-- <%= f.input :status %> -->
-  </div>
-
-  <div class="form-actions">
+<div class="form-inline">
+<!-- <%= f.input :date %> -->
+    <div class="form-group">
+        <div class="input-group">
+            <div class="input-group-addon">$</div>
+            <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
+<!-- <%= f.input :type %> -->
+<!-- <%= f.input :status %> -->
+        </div>
+    </div>
+</div>
+<br>
+<div class="form-actions">
     <%= f.button :submit %>
-  </div>
+</div>
 <% end %>
