renamed the column type to t_type in transactions table

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -7,10 +7,11 @@
         <div class="input-group">
             <div class="input-group-addon">$</div>
             <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
-<!-- <%= f.input :type %> -->
-<!-- <%= f.input :status %> -->
         </div>
-    </div>
+    </div><br>
+    Type:
+    <br><%= f.input :t_type, required: true, label: false %>
+<!-- <%= f.input :status %> -->
 </div>
 <br>
 <div class="form-actions">
