--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,13 @@
-<div class="jumbotron">
-    <h1>Welcome to Bankoo!</h1>
-    <!-- <p>Bank Simulator</p> -->
-    <p>
-        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-    </p>
+<div class="jumbo-home">
+    <div class="jumbotron">
+        <h1>Welcome to Bankoo!</h1>
+<!-- <p>Bank Simulator</p> -->
+        <div class="home">
+            <p>
+                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+            </p>
+        </div>
+    </div>
 </div>
 
 <!-- <div class="row">
