changed buttons to default

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -37,7 +37,7 @@
 
             <br>
             <div style="text-align:center">
-                <%= link_to "Deposit/Withdraw", new_transaction_path, class: "btn btn-primary"%>
+                <%= link_to "Deposit/Withdraw", new_transaction_path, class: "btn btn-default"%>
             </div>
         </div>
     </div>
