--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
         </div>
 
         <div class="form-actions">
-            <%= f.button :submit, "Update", class: "btn btn-primary" %>
+            <%= f.button :submit, "Update", class: "btn btn-default" %>
         </div>
         <% end %>
 
