--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
         <h1>Welcome to Bankoo!</h1>
         <div class="home">
             <p>
-                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-default btn-lg" %>
             </p>
         </div>
     </div>
