--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -7,6 +7,6 @@
                 <%= render 'form' %>
             </div>
         </div>
-        <%= link_to 'Back', transactions_path, class: "btn btn-primary" %>
+        <%= link_to 'Back', transactions_path, class: "btn btn-default" %>
     </div>
 </div>
