made changes to the style of the website

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,3 +8,39 @@
         </div>
     </div>
 </div>
+
+<div class="center-panel">
+    <div class="row" id="panel-h">
+        <div class="col-md-4">
+            <div class="panel panel-danger">
+                <div class="panel-heading">Heading</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="panel panel-danger">
+                <div class="panel-heading">Heading</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="panel panel-danger">
+                <div class="panel-heading">Heading</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="jumbotron">
+        <%= render "layouts/footer" %>
+    </div>
+</footer>
