--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <%= render "notice" %>
+        <!-- <%= render "notice" %> -->
         <div>
             <h1 class="row" style="text-align:center">Transaction History</h1>
             <div class="panel panel-default">
