--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
         </div>
 
         <div class="form-actions">
-            <%= f.button :submit, "Sign up", class: "btn btn-default btn-lg" %>
+            <%= f.button :submit, "Sign up", class: "btn btn-default" %>
         </div>
         <% end %>
 
