--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,19 +1,23 @@
-<%= simple_form_for(@transaction, html: {class: "form-signin"}) do |f| %>
-<%= f.error_notification %>
-<div class="form-inline">
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <%= simple_form_for(@transaction, html: {class: "form-signin"}) do |f| %>
+        <%= f.error_notification %>
+        <div class="form-inline">
 <!-- <%= f.input :date %> -->
-    <div class="form-group">
-        <div class="input-group">
-            <div class="input-group-addon">$</div>
-            <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
-        </div>
-    </div><br>
-    Type:
-    <br><%= f.input :t_type, required: true, label: false %>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">$</div>
+                    <%= f.input :amount, required: true, label: false, placeholder: "Amount to deposit" %>
+                </div>
+            </div><br>
+            Type:
+            <br><%= f.input :t_type, required: true, label: false %>
 <!-- <%= f.input :status %> -->
+        </div>
+        <br>
+        <div class="form-actions">
+            <%= f.button :submit, class: "btn btn-default" %>
+        </div>
+        <% end %>
+    </div>
 </div>
-<br>
-<div class="form-actions">
-    <%= f.button :submit, class: "btn btn-default" %>
-</div>
-<% end %>
