--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <ul>
-                        <li><strong>About</strong></li>
+                        <li><strong>About</strong></li><br>
                         <li>Home</li>
                         <li>About Us</li>
                         <li>Contact Us</li>
@@ -12,17 +12,19 @@
                 </div>
 
                 <div class="col-md-4">
-                    <ul><strong>Links</strong></li>
+                    <ul>
+                        <li><strong>Links</strong></li><br>
                         <li>Transactions</li>
                         <li>Profile</li>
                         <li>FAQ</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <strong>Connect with us<strong><br>
+                    <strong>Connect with us<strong><br><br>
                     <%= link_to '<i class="fa fa-github fa-3x"></i>'.html_safe, "https://github.com/henrypl95/bankoo", target: "_blank" %>
-                    &nbsp;<%= link_to '<i class="fa fa-twitter fa-3x"></i>'.html_safe, href: "https://twitter.com/henrypl95", target: "_blank"%>
-                    &nbsp;<%= link_to '<i class="fa fa-linkedin fa-3x"></i>'.html_safe, href: "https://github.com/henrypl95/bankoo", target: "_blank" %>
+                    &nbsp;<%= link_to '<i class="fa fa-twitter fa-3x"></i>'.html_safe, "https://twitter.com/henrypl95", target: "_blank"%>
+                    &nbsp;<%= link_to '<i class="fa fa-linkedin fa-3x"></i>'.html_safe, "https://www.linkedin.com/in/henrypl95
+", target: "_blank" %>
                 </div>
             </div>
         </div>
