--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -124,3 +124,11 @@ div .blank-space {
     margin-top: 100px;
     margin-bottom: 200px;
 }
+
+.dropdown-menu>li>a {
+    color: #b21414;
+}
+
+.t-table {
+    margin-top: -100px;
+}
