--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,8 +3,9 @@
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
     <div class="col-md-6 col-md-offset-3">
-        <h1 style="text-align:center">New Transaction</h1>
+        <h1 style="text-align:center">Settings</h1>
         <div class="blank-space">
+            <%= current_user.first_name %>
             <div class="form-inputs">
                 <%= f.input :email, required: true, autofocus: true %>
 
