changes to the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,27 +13,27 @@
     <div class="row" id="panel-h">
         <div class="col-md-4">
             <div class="panel panel-danger">
-                <div class="panel-heading">Heading</div>
+                <div class="panel-heading">Withdraw and Deposit Money</div>
                 <div class="panel-body">
-                    Panel content
+                    With us, your money is safe. Deposit and withdraw money securely without worries
                 </div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-danger">
-                <div class="panel-heading">Heading</div>
+                <div class="panel-heading">Transaction History</div>
                 <div class="panel-body">
-                    Panel content
+                    Keep track of every transaction you make. You can see when it happened and the amount of each transaction.
                 </div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="panel panel-danger">
-                <div class="panel-heading">Heading</div>
+                <div class="panel-heading">Investing</div>
                 <div class="panel-body">
-                    Panel content
+                    Coming Soon!
                 </div>
             </div>
         </div>
